Software/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:59:20 **** Incremental Build of configuration Debug for project Klebot ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F107xC -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3 -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/radio_task.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F107xC -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3 -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/radio_task.d" -MT"Core/Src/radio_task.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/radio_task.o"
In file included from ../Core/Src/main.c:43:
../Core/Inc/klebot_radio.h:34:9: error: redeclaration of enumerator 'RADIO_OK'
   34 |         RADIO_OK,               // 0
      |         ^~~~~~~~
In file included from ../Core/Src/main.c:39:
../Core/Inc/radio_task.h:17:9: note: previous definition of 'RADIO_OK' with type 'enum <anonymous>'
   17 |         RADIO_OK,               // 0
      |         ^~~~~~~~
In file included from ../Core/Src/main.c:43:
../Core/Inc/klebot_radio.h:35:9: error: redeclaration of enumerator 'RADIO_ERROR'
   35 |         RADIO_ERROR,    // 1
      |         ^~~~~~~~~~~
In file included from ../Core/Src/main.c:39:
../Core/Inc/radio_task.h:18:9: note: previous definition of 'RADIO_ERROR' with type 'enum <anonymous>'
   18 |         RADIO_ERROR,    // 1
      |         ^~~~~~~~~~~
In file included from ../Core/Src/main.c:43:
../Core/Inc/klebot_radio.h:36:9: error: redeclaration of enumerator 'RADIO_BUSY'
   36 |         RADIO_BUSY,             // 2
      |         ^~~~~~~~~~
In file included from ../Core/Src/main.c:39:
../Core/Inc/radio_task.h:19:9: note: previous definition of 'RADIO_BUSY' with type 'enum <anonymous>'
   19 |         RADIO_BUSY,             // 2
      |         ^~~~~~~~~~
In file included from ../Core/Src/main.c:43:
../Core/Inc/klebot_radio.h:37:9: error: redeclaration of enumerator 'RADIO_NEW_RX'
   37 |         RADIO_NEW_RX
      |         ^~~~~~~~~~~~
In file included from ../Core/Src/main.c:39:
../Core/Inc/radio_task.h:20:9: note: previous definition of 'RADIO_NEW_RX' with type 'enum <anonymous>'
   20 |         RADIO_NEW_RX
      |         ^~~~~~~~~~~~
In file included from ../Core/Src/main.c:43:
../Core/Inc/klebot_radio.h:38:3: error: conflicting types for 'Klebot_Radio_Status'; have 'enum <anonymous>'
   38 | } Klebot_Radio_Status;
      |   ^~~~~~~~~~~~~~~~~~~
In file included from ../Core/Src/main.c:39:
../Core/Inc/radio_task.h:21:3: note: previous declaration of 'Klebot_Radio_Status' with type 'Klebot_Radio_Status'
   21 | } Klebot_Radio_Status;
      |   ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'HAL_GPIO_EXTI_Callback':
../Core/Src/main.c:210:17: warning: implicit declaration of function 'Radio_HandlerIRQ' [-Wimplicit-function-declaration]
  210 |                 Radio_HandlerIRQ();
      |                 ^~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:79: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j12 all" terminated with exit code 2. Build might be incomplete.
